Add debug option Add test to parse and check the message